ansible/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-ingress
  annotations:
          #      kubernetes.io/ingress.class: haproxy
          #    nginx.ingress.kubernetes.io/rewrite-target: /
          #      ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-service
            port:
              number: 80


      - path: /bank
        pathType: Prefix
        backend:
          service:
            name: bank-service
            port:
              number: 8080
